negaflow-windows/src/Native/abi/include/negaflow/abi/develop_entry.h

/* Same pipeline as nf_develop_export_v1 but stops before publishing and fills `pixels`
   with a BGRA8 display bitmap, tightly packed, opaque alpha, at most the requested size
   with aspect preserved. `destination_path` is ignored. The written size comes back as
   result->image_width and result->image_height. Blocking; safe on a worker thread. */
NF_API nf_status_t NF_CALL nf_develop_preview_v1(
    const nf_develop_export_request_v1* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v1* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v2(
    const nf_develop_export_request_v2* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v3(
    const nf_develop_export_request_v3* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v4(
    const nf_develop_export_request_v4* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v5(
    const nf_develop_export_request_v5* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v6(
    const nf_develop_export_request_v6* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v7(
    const nf_develop_export_request_v7* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v8(
    const nf_develop_export_request_v8* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v9(
    const nf_develop_export_request_v9* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v10(
    const nf_develop_export_request_v10* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v11(
    const nf_develop_export_request_v11* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v12(
    const nf_develop_export_request_v12* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v13(
    const nf_develop_export_request_v13* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v14(
    const nf_develop_export_request_v14* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v15(
    const nf_develop_export_request_v15* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v16(
    const nf_develop_export_request_v16* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v17(
    const nf_develop_export_request_v17* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v18(
    const nf_develop_export_request_v18* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v19(
    const nf_develop_export_request_v19* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v20(
    const nf_develop_export_request_v20* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);
NF_API nf_status_t NF_CALL nf_develop_preview_v21(
    const nf_develop_export_request_v21* request,
    uint32_t maximum_width,
    uint32_t maximum_height,
    uint8_t* pixels,
    uint32_t pixel_capacity_bytes,
    nf_develop_export_result_v2* result);